package GUIPresenters;

public class MenuPresenter {
    public static void nextPanel(String panelChoice){

    }
}
