@startuml

title __GROUP_0384's Class Diagram__\n

  namespace  {
    class EventSorterTests {
    }
  }
  

  namespace  {
    class Main {
    }
  }
  

  namespace  {
    namespace ontrollers {
      class controllers.EventController {
      }
    }
  }
  

  namespace  {
    namespace ontrollers {
      class controllers.LoginSystem {
      }
    }
  }
  

  namespace  {
    namespace ontrollers {
      class controllers.MessageController {
      }
    }
  }
  

  namespace  {
    namespace ntities {
      class entities.Attendee {
      }
    }
  }
  

  namespace  {
    namespace ntities {
      class entities.Event {
      }
    }
  }
  

  namespace  {
    namespace ntities {
      class entities.Message {
      }
    }
  }
  

  namespace  {
    namespace ntities {
      class entities.Organizer {
      }
    }
  }
  

  namespace  {
    namespace ntities {
      class entities.Speaker {
      }
    }
  }
  

  namespace  {
    namespace ntities {
      abstract class entities.User {
      }
    }
  }
  

  namespace  {
    namespace ateways {
      class gateways.EventIO {
      }
    }
  }
  

  namespace  {
    namespace ateways {
      class gateways.MessageIO {
      }
    }
  }
  

  namespace  {
    namespace ateways {
      class gateways.UserIO {
      }
    }
  }
  

  namespace  {
    namespace resenters {
      class presenters.EventPresenter {
      }
    }
  }
  

  namespace  {
    namespace resenters {
      class presenters.EventSorter {
      }
    }
  }
  

  namespace  {
    namespace resenters {
      class presenters.MenuPresenter {
      }
    }
  }
  

  namespace  {
    namespace resenters {
      class presenters.MessagePresenter {
      }
    }
  }
  

  namespace  {
    namespace seCases {
      class useCases.EventManager {
      }
    }
  }
  

  namespace  {
    namespace seCases {
      class useCases.MessageManager {
      }
    }
  }
  

  namespace  {
    namespace seCases {
      class useCases.UserManager {
      }
    }
  }
  

  namespace  {
    namespace serInterfaces {
      class userInterfaces.EventUserInterface {
      }
    }
  }
  

  namespace  {
    namespace serInterfaces {
      class userInterfaces.MenuUserInterface {
      }
    }
  }
  

  namespace  {
    namespace serInterfaces {
      class userInterfaces.MessageUserInterface {
      }
    }
  }
  

  namespace  {
    namespace serInterfaces {
      class userInterfaces.UserCreationUserInterface {
      }
    }
  }
  

  entities.Attendee -up-|> entities.User
  entities.Organizer -up-|> entities.User
  entities.Speaker -up-|> entities.User


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
